# a2a-server-client

./: CLAUDE.md  README.md  app.py  host_agent.py  prompt_manager.py  pyproject.toml  requirements.txt  run_agents.sh  run_mcp_server.sh  standalone_host_agent.py
common/google/: abstract_agent.py  agent.py  executor.py  tool.py  types.py
host/: host_agent.py
mcp/agent/: product_agent.py  travel_guide_agent.py  user_agent.py
mcp/server/: prod_mcp_server.py  travel_mcp_server.py  user_mcp_server.py
resource/: prompt.yaml
resource/app/: app.js
